# fastapi-auth-service-learning

./: .gitignore  AUTH_NOTES.md  INTERVIEW_GUIDE.md  README.md  pyproject.toml
app/: __init__.py  database.py  main.py
app/api/: auth.py  deps.py
app/core/: config.py  security.py
app/models/: refresh_token.py  user.py
app/schemas/: auth.py
app/services/: auth_service.py
tests/: test_auth_flow.py
